# stx-tauri

./: .gitignore  bun.lockb  package.json  uno.config.ts
src/: auto-imports.d.ts  components.d.ts  main.ts  typed-router.d.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/.stacks/: Cargo.toml
src-tauri/.stacks/src/: command.rs  lib.rs  utils.rs
src-tauri/.stacks/src/commands/: mod.rs
src-tauri/.stacks/src/internals/: tray.rs  window.rs
src-tauri/.stacks/src/models/events/: mod.rs
src-tauri/src/: main.rs
src-tauri/src/ui/: utils.rs
src/components/: TheHeader.vue
src/components/layout/: controls.vue  header.vue
src/layouts/: default.vue  home.vue
src/pages/: index.vue  settings.vue
src/pages/project/: [projectName].vue
